Change background for dialogs

--- a/app/src/main/res/layout/view_rename.xml
+++ b/app/src/main/res/layout/view_rename.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/layout_24dp"
+    tools:background="?attr/clPrimary"
     android:paddingTop="@dimen/layout_16dp"
     tools:layout_gravity="center">
 
