Fix laggy effect on item select (title is disappear for a second)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
         android:background="?attr/clPrimary"
         app:itemIconTint="@drawable/se_menu_main_item"
         app:itemTextColor="@drawable/se_menu_main_item"
+        app:labelVisibilityMode="selected"
         app:menu="@menu/activity_main" />
 
 </LinearLayout>
