--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/main_add_fab"
             style="?attr/styleFab"
             android:layout_width="wrap_content"
+            android:contentDescription="@string/description_add_note"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/layout_16dp"
