--- a/app/src/main/res/values/strings_description.xml
+++ b/app/src/main/res/values/strings_description.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="description_add_note">Add note</string>
+
     <string name="description_note_restore">Restore</string>
     <string name="description_note_restore_open">Restore and open</string>
     <string name="description_note_clear">Delete forever</string>
