Make EternalService.kt correct open

--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -30,7 +30,7 @@
     <string name="notification_eternal_channel_description">
         Канал нужен для \"вечной\" привязки заметок в шторке уведомлений, а так же для
         предотвращения их исчезновения при закрытии приложения. Пожалуйста, выключите уведомления
-        для этого канала.
+        для этого канала
     </string>
 
     <string name="notification_notes_group_summary">Заметки</string>
@@ -48,8 +48,9 @@
 
     <string name="notification_eternal_title">Вечный сервис работает</string>
     <string name="notification_eternal_description">
-        Привет! Это уведомление жизненно важно для постоянной работы уведомлений в приложении
-        (чтобы они не исчезали). Вы можете скрыть данный канал в настройках приложения.
+        Привет! Это уведомление жизненно важно для хорошей работы приложения (чтобы уведомления
+        не исчезали). Вы можете скрыть данный канал в настройках приложения.
+        Просто нажми на меня и настройки откроются.
     </string>
 
     <!-- Button -->
