--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="sgtmelon.scriptum.presentation.screen.ui.impl.preference.PreferenceActivity">
+    tools:context=".presentation.screen.ui.impl.preference.PreferenceActivity">
 
     <include layout="@layout/inc_toolbar_simple" />
 
