--- a/app/src/main/res/layout/activity_print.xml
+++ b/app/src/main/res/layout/activity_print.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".presentation.screen.ui.impl.preference.DevelopActivity">
+        tools:context=".presentation.screen.ui.impl.preference.develop.DevelopActivity">
 
         <include layout="@layout/inc_toolbar_simple" />
 
