--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -6,6 +6,8 @@
     <string name="pref_header_app">Приложение</string>
     <string name="pref_header_backup">Резервное копирование</string>
     <string name="pref_header_note">Заметки</string>
+    <string name="pref_header_common">Общее</string>
+    <string name="pref_header_save">Сохранение</string>
     <string name="pref_header_alarm">Уведомления</string>
     <string name="pref_header_other">Прочее</string>
 
